# xshe

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml  panic.yml
.github/workflows/: dependency-review.yml  no_rust.yml  release.yml  rust.yml
docs/: CNAME  README.md  _coverpage.md  _navbar.md  _sidebar.md  cli.md  config_file.md  index.html  install.md
src/: cli.rs  config_file.rs  convert.rs  main.rs  structure.rs
src/convert/: mod.rs  parser.rs
tests/: output_tests.rs
