[package]
name = "xshe"
version = "0.4.2"
edition = "2021"
description = "Set environment variables across multiple shells with a single configuration file."
readme = "README.md"
homepage = "https://github.com/superatomic/xshe/"
repository = "https://github.com/superatomic/xshe/"
keywords = ["cli", "shell", "environment-variable", "configuration", "command"]
categories = ["command-line-utilities", "config", "parsing"]
license = "MIT OR Apache-2.0"
exclude = [".github/"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "1.0.0"
exitcode = "1.1.2"
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
indexmap = { version = "1.8.1", features = ["serde"] }
shellexpand = "2.1.0"
human-panic = "1.0.3"
log = "0.4.17"
env_logger = "0.9.0"

[dev-dependencies]
indoc = "1.0.6"
maplit = "1.0.2"
pretty_assertions = "1.2.1"

[build-dependencies]
clap = { version = "3.1.18", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "1.0.0"
clap_mangen = "0.1.6"
clap_complete = "3.1.3"
