[package]
name = "xshe"
version = "0.6.0"
edition = "2021"
description = "Set environment variables across multiple shells with a single configuration file."
readme = "README.md"
homepage = "https://xshe.superatomic.dev"
repository = "https://github.com/superatomic/xshe"
keywords = ["cli", "shell", "environment-variable", "configuration", "command"]
categories = ["command-line-utilities", "config", "parsing"]
license = "MIT OR Apache-2.0"
exclude = [".github/"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "2.1.0"
exitcode = "1.1.2"
toml = { version = "0.8.8", features = ["parse"] }
serde = { version = "1.0.192", features = ["derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
human-panic = "1.2.2"
log = "0.4.20"
env_logger = "0.10.1"
colored = "2.0.4"
dirs = "5.0.1"

[dev-dependencies]
indoc = "2.0.4"
maplit = "1.0.2"
pretty_assertions = "1.4.0"

[build-dependencies]
clap = { version = "4.4.7", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "2.1.0"
clap_mangen = "0.2.15"
clap_complete = "4.4.4"
